<?xml version="1.0" encoding="UTF-8"?>
<!--

       Copyright 2012-2025 the original author or authors.

       Licensed under the Apache License, Version 2.0 (the "License");
       you may not use this file except in compliance with the License.
       You may obtain a copy of the License at

          https://www.apache.org/licenses/LICENSE-2.0

       Unless required by applicable law or agreed to in writing, software
       distributed under the License is distributed on an "AS IS" BASIS,
       WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
       See the License for the specific language governing permissions and
       limitations under the License.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.mybatis</groupId>
    <artifactId>mybatis-parent</artifactId>
    <version>49</version>
    <relativePath />
  </parent>

  <groupId>org.mybatis.scripting</groupId>
  <artifactId>mybatis-velocity</artifactId>
  <version>2.3.1-SNAPSHOT</version>

  <name>MyBatis Velocity</name>
  <description>Velocity support for MyBatis</description>
  <url>http://www.mybatis.org/scripting/velocity/</url>

  <inceptionYear>2012</inceptionYear>

  <scm>
    <connection>scm:git:ssh://git@github.com/mybatis/velocity-scripting.git</connection>
    <developerConnection>scm:git:ssh://git@github.com/mybatis/velocity-scripting.git</developerConnection>
    <tag>HEAD</tag>
    <url>http://github.com/mybatis/velocity-scripting/</url>
  </scm>
  <issueManagement>
    <system>GitHub Issue Management</system>
    <url>https://github.com/mybatis/velocity-scripting/issues</url>
  </issueManagement>
  <ciManagement>
    <system>GitHub Actions</system>
    <url>https://github.com/mybatis/velocity-scripting/actions</url>
  </ciManagement>
  <distributionManagement>
    <site>
      <id>gh-pages-scm</id>
      <name>Mybatis GitHub Pages</name>
      <url>scm:git:ssh://git@github.com/mybatis/velocity-scripting.git</url>
    </site>
  </distributionManagement>

  <properties>
    <!-- Maven compiler options -->
    <java.version>11</java.version>
    <java.release.version>11</java.release.version>

    <findbugs.onlyAnalyze>org.mybatis.scripting.velocity.*</findbugs.onlyAnalyze>
    <gcu.product>Velocity</gcu.product>
    <module.name>org.mybatis.scripting.velocity</module.name>
    <clirr.comparisonVersion>2.0</clirr.comparisonVersion>

    <!-- Reproducible Builds -->
    <project.build.outputTimestamp>1727305066</project.build.outputTimestamp>

    <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.mybatis</groupId>
      <artifactId>mybatis</artifactId>
      <version>3.5.19</version>
    </dependency>
    <dependency>
      <groupId>org.apache.velocity</groupId>
      <artifactId>velocity-engine-core</artifactId>
      <version>2.4.1</version>
    </dependency>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-text</artifactId>
      <version>1.13.1</version>
    </dependency>

    <!-- TEST -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.12.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.hsqldb</groupId>
      <artifactId>hsqldb</artifactId>
      <version>2.7.4</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>2.0.17</version>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-release-plugin</artifactId>
        <configuration>
          <releaseProfiles>release,bundle</releaseProfiles>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
